--- a/app-emulation/xen-tools/files/gentoo-patches.conf
+++ b/app-emulation/xen-tools/files/gentoo-patches.conf
@@ -75,6 +75,13 @@ _gx028=" xen-tools-4.4.1-tinfo.patch"
 # Don't download ovmf, use pre-released
 _gx029=" xen-tools-4-anti-ovmf-download.patch"
 
+# fix build err while using gcc-4.5.x, c99
+_gx033=" xen-tools-4.4.2-gcc99.patch"
+_gx034=" xen-tools-4.5.0-gcc99.patch"
+
+_gx035=" xen-tools-4.2-pod-docs-r1.patch"
+# disable stackcheck for hardened system, bug 569810
+_gx036=" xen-tools-4.6-no-stackcheck.patch"
 # xen-tools-4.2.5 patches set
 _gpv_xen_tools_425_0="
 ${_gx001} ${_gx002} ${_gx003} ${_gx004} ${_gx005}
@@ -82,42 +89,38 @@ ${_gx006} ${_gx007} ${_gx008} ${_gx009} ${_gx010}
 ${_gx011} ${_gx012} ${_gx013} ${_gx014} ${_gx015}
 ${_gx016} ${_gx017} ${_gx018} ${_gx019}
 "
-
-# xen-tools-4.3.3 patches set
-_gpv_xen_tools_433_0="
-${_gx020} ${_gx002} ${_gx003}
-${_gx007} ${_gx008} ${_gx009} ${_gx010}
-${_gx021} ${_gx012} ${_gx014} ${_gx022}
-${_gx017} ${_gx023} ${_gx019}
+_gpv_xen_tools_425_1="
+${_gx001} ${_gx002} ${_gx003} ${_gx004} ${_gx035}
+${_gx006} ${_gx007} ${_gx008} ${_gx009} ${_gx010}
+${_gx011} ${_gx012} ${_gx013} ${_gx014} ${_gx015}
+${_gx016} ${_gx017} ${_gx018} ${_gx019}
 "
 
-# xen-tools-4.4.1 patches set
-_gpv_xen_tools_441_0="
-${_gx007} ${_gx008} ${_gx009}
-${_gx024} ${_gx021} ${_gx014}
-${_gx022} ${_gx017} ${_gx025}
-${_gx026} ${_gx027} ${_gx019}
-"
-
-_gpv_xen_tools_441_1="
-${_gx007} ${_gx008} ${_gx009}
-${_gx024} ${_gx021} ${_gx014}
-${_gx022} ${_gx017} ${_gx025}
-${_gx026} ${_gx027} ${_gx019}
-${_gx028}
-"
-_gpv_xen_tools_441_2="
-${_gx007} ${_gx008} ${_gx009}
-${_gx024} ${_gx021} ${_gx014}
-${_gx022} ${_gx017} ${_gx025}
-${_gx026} ${_gx027} ${_gx019}
-${_gx028} ${_gx029}
-"
-
-# xen-tools-4.5.0 patches set
-_gpv_xen_tools_450_rc1_0="
+# xen-tools-4.5.1 patches set
+_gpv_xen_tools_451_0="
 ${_gx008} ${_gx024} ${_gx021}
 ${_gx022} ${_gx017} ${_gx031}
 ${_gx027} ${_gx032}
+${_gx028} ${_gx029} ${_gx034}
+"
+# xen-tools-4.5.2 patches set
+_gpv_xen_tools_452_0="
+${_gx008} ${_gx024} ${_gx021}
+${_gx022} ${_gx017} ${_gx031}
+${_gx027} ${_gx032}
+${_gx028} ${_gx029} ${_gx034}
+"
+# xen-tools-4.6.0 patches set
+_gpv_xen_tools_460_0="
+${_gx008} ${_gx021}
+${_gx022} ${_gx017} ${_gx031}
+${_gx027} ${_gx032}
 ${_gx028} ${_gx029}
+"
+# xen-tools-4.6.1 patches set
+_gpv_xen_tools_461_0="
+${_gx008} ${_gx021}
+${_gx022} ${_gx017} ${_gx031}
+${_gx027} ${_gx032}
+${_gx028} ${_gx029} ${_gx036}
 "
