--- a/sys-auth/consolekit/files/consolekit-0.2.rc
+++ b/sys-auth/consolekit/files/consolekit-0.2.rc
@@ -1,7 +1,7 @@
 #!/sbin/runscript
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License, v2 or later
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/files/consolekit-0.1.rc,v 1.2 2009/09/12 19:46:19 nirbheek Exp $
+# $Id$
 
 depend() {
 	need dbus
@@ -10,6 +10,8 @@ depend() {
 
 start() {
 	ebegin "Starting ConsoleKit daemon"
+
+	checkpath -q -d -m 0755 /var/run/ConsoleKit
 
 	start-stop-daemon --start -q \
 		--pidfile /var/run/ConsoleKit/pid \
